<?xml version="1.0" encoding="utf-8"?>
    <FrameLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        tools:context=".NfcActivity"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/loading_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical"
        android:visibility="visible">

        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/info_loading" />

    </LinearLayout>

    <ScrollView
        android:id="@+id/main_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"
        tools:context=".NFCActivity">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingBottom="@dimen/activity_vertical_margin">

            <ImageView
                android:id="@+id/view_photo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:contentDescription="@string/photo"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:layout_marginBottom="@dimen/activity_vertical_margin"
                tools:src="@drawable/photo" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:divider="@drawable/linear_divider"
                android:orientation="horizontal"
                android:showDividers="middle"
                android:baselineAligned="false">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:divider="@drawable/linear_divider"
                    android:gravity="end"
                    android:orientation="vertical"
                    android:showDividers="middle">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/result_first_name"
                        android:textAppearance="@style/TextAppearance.AppCompat.Subhead" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/result_last_name"
                        android:textAppearance="@style/TextAppearance.AppCompat.Subhead" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/result_gender"
                        android:textAppearance="@style/TextAppearance.AppCompat.Subhead" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/result_state"
                        android:textAppearance="@style/TextAppearance.AppCompat.Subhead" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/result_nationality"
                        android:textAppearance="@style/TextAppearance.AppCompat.Subhead" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/result_passive_auth"
                        android:textAppearance="@style/TextAppearance.AppCompat.Subhead" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/result_chip_auth"
                        android:textAppearance="@style/TextAppearance.AppCompat.Subhead" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:divider="@drawable/linear_divider"
                    android:gravity="start"
                    android:orientation="vertical"
                    android:showDividers="middle">

                    <TextView
                        android:id="@+id/output_first_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
                        tools:text="Peter" />

                    <TextView
                        android:id="@+id/output_last_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
                        tools:text="Jackson" />

                    <TextView
                        android:id="@+id/output_gender"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
                        tools:text="Male" />

                    <TextView
                        android:id="@+id/output_state"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
                        tools:text="NZD" />

                    <TextView
                        android:id="@+id/output_nationality"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
                        tools:text="New Zealand" />

                    <TextView
                        android:id="@+id/output_passive_auth"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        tools:text="No"
                        android:textAppearance="@style/TextAppearance.AppCompat.Subhead" />

                    <TextView
                        android:id="@+id/output_chip_auth"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
                        tools:text="No" />

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>
    </ScrollView>
</FrameLayout>


